test/visibility/import/enablesUnqualified/multipleUnqualified/useAndImport-useOnly1d.good
useAndImport-useOnly1d.chpl:21: In function 'main':
useAndImport-useOnly1d.chpl:24: error: 'A' undeclared (first use this function)
